--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@
   --large: 20px;
   --xLarge: 24px;
   --huge: 30px;
+  --big: 44px;
   --inbetween: 62px;
   --header: 82px;
   --humangos: 100px;
@@ -104,7 +105,6 @@ button:hover {
   margin: 0 300px;
 }
 
-
 @media (max-width: 575px) {
   :root {
     /* font sizes */
@@ -145,14 +145,23 @@ button:hover {
   }
 }
 
-@media (min-width: 576px) {
+@media (max-width: 768px) {
+  .title {
+    width: 550px;
+    text-align: center;
+  }
 }
 
-@media (min-width: 768px) {
+@media (max-width: 1200px) {
+  .title {
+    width: 750px;
+    text-align: center;
+  }
+
+}
+
+/* @media (min-width: 576px) {
 }
 
 @media (min-width: 992px) {
-}
-
-@media (min-width: 1200px) {
-}
+} */
