--- a/src/components/Contact/Contact.style.css
+++ b/src/components/Contact/Contact.style.css
@@ -68,6 +68,10 @@
   #contact {
     margin-top: var(--biggest);
   }
+  #contact .title h3 {
+    font-size: var(--xLarge);
+    text-align: center;
+  }
   .contact_content h3 {
     margin: var(--big_margin) 0;
   }
@@ -96,7 +100,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 576px) and (max-width: 768px) {
   #contact {
     margin-top: var(--biggest);
   }
@@ -139,7 +143,7 @@
   }
 }
 
-@media (max-width: 1200px) {
+@media (min-width: 769px) and (max-width: 1200px) {
   .contact_content {
     width: 750px;
   }
