--- a/src/components/Navbar/Navbar.style.css
+++ b/src/components/Navbar/Navbar.style.css
@@ -210,7 +210,7 @@ nav .menu-btn,
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 576px) and (max-width: 768px) {
   .menu-icon {
     display: block;
   }
@@ -327,7 +327,7 @@ nav .menu-btn,
   }
 }
 
-@media (max-width: 1200px) {
+@media (min-width: 769px) and (max-width: 1200px) {
   .nav-title {
     font-size: 36px;
     color: var(--secondary_color);
